# sauvc

./: .gitignore  .gitmodules  README.md  build.sh  build_control.sh  build_control_with_serial.sh  build_vision.sh  run.sh  sweep.bash  test_dev.bash
launch/: videofile.launch
src/install/: local_setup.sh  setup.sh
src/install/marker_finder/share/marker_finder/: package.bash  package.zsh
src/install/sauvc_pinger_finder/share/sauvc_pinger_finder/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/sauvc_pinger_finder/share/sauvc_pinger_finder/cmake/: sauvc_pinger_finderConfig.cmake
src/install/serial/share/serial/: local_setup.sh  package.bash  package.sh  package.zsh
src/install/serial/share/serial/cmake/: ament_cmake_export_dependencies-extras.cmake  serialConfig.cmake
src/install/stingray_core_communication/include/stingray_core_communication/: hardware_bridge.h  uart_driver.h  udp_driver.h
src/install/stingray_core_communication/include/stingray_core_communication/messages/: common.h  config.h  direct.h  normal.h
src/install/stingray_core_communication/share/stingray_core_communication/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/stingray_core_communication/share/stingray_core_communication/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  stingray_core_communicationConfig.cmake
src/install/stingray_core_interfaces/share/stingray_core_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/stingray_core_interfaces/share/stingray_core_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_stingray_core_interfaces__rosidl_generator_cExport-noconfig.cmake  export_stingray_core_interfaces__rosidl_generator_cExport.cmake  export_stingray_core_interfaces__rosidl_generator_cppExport.cmake  rosidl_cmake-extras.cmake  (+17 more)
src/install/stingray_interfaces/share/stingray_interfaces/: package.bash  package.zsh
src/log/: latest_build
src/marker_finder/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/marker_finder/launch/: marker.launch.py  marker_finder.launch
src/marker_finder/marker_debug/: detector.ipynb
src/marker_finder/marker_finder/: marker_detector.py
src/marker_finder/msg/: ObjectsArray.msg
src/marker_finder/scripts/: marker_detector.py
src/sauvc_common/: CMakeLists.txt  package.xml
src/sauvc_common/msg/: Gate.msg  Object.msg  Objects.msg  ObjectsArray.msg
src/sauvc_launch/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/sauvc_launch/launch/: com.launch.py  control.launch.py  main.launch.py  object_detection.launch  pinger.launch.py  sauvc.launch  vision.launch.py  vision_yolov5.launch.py  vision_yolov8.launch.py
src/sauvc_missions/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/sauvc_missions/configs/missions/: blue_bowl.yaml  device_test.yaml  flares.yaml  gate.yaml  hydroacoustic_bowl.yaml  navigation.yaml  qualification.yaml  qualification_vision.yaml  search_vision_gate.yaml  search_vision_yellow.yaml  test_day.yaml  yellow.yaml  yellow_column.yaml
src/sauvc_missions/configs/scenarios/: all.yaml  blue_bowl.yaml  demo.yaml  device_test.yaml  flares.yaml  gate.yaml  gate_yellow.yaml  hydroacoustic.yaml  navigation.yaml  qualification.yaml  qualification_vision.yaml  test_day.yaml  yellow.yaml
src/sauvc_missions/scripts/: dropper_standalone.py  lifter_standalone.py  sauvc_controller.py  tfsm_master.py
src/sauvc_missions/scripts/sauvc_missions/: avoid_submachine.py  centering.py  centering_alt.py  centering_angle.py  centering_experimental.py  devices_test.py  distance_test.py  dropper_standalone.py  drums.py  drums_centering_on_move.py  drums_lift_on_move.py  drums_on_move.py  gate.py  gate_bruteforce.py  gate_centering.py  gate_on_move.py  gate_vision.py  hardware_test.py  planar_test.py  qualification.py  qualification_stupid.py  reach_submachine.py  sauvc_mission.py  square_test.py  test_mission.py  test_on_surface.py  uart_test_mission.py  yellow.py  yellow_on_move.py
src/sauvc_missions/src/sauvc_missions/: __init__.py  sauvc_missions_fsm.py
src/sauvc_object_detection/: package.xml  setup.cfg  setup.py
src/sauvc_object_detection/weights/: bbox_attrs.yaml  yolov5.yaml  yolov8.yaml
src/sauvc_pinger_finder/: CMakeLists.txt  package.xml
src/sauvc_pinger_finder/include/sauvc_pinger_finder/: hydroacoustic_bridge.h
src/sauvc_pinger_finder/include/sauvc_pinger_finder/messages/: msg_pingerFinder.h
src/sauvc_pinger_finder/src/: hydroacoustic_bridge_node.cpp  uart_driver_node.cpp
src/sauvc_pinger_finder/src/messages/: msg_pingerFinder.cpp
src/sauvc_startup/: CMakeLists.txt  package.xml
src/sauvc_startup/launch/: base.launch  gate_vision.launch  main.launch  missions.launch  object_detection.launch  sauvc.launch  sauvc_demo.launch  sauvc_master.launch  sauvc_qr_demo.launch  sauvc_qr_dropper.launch  sauvc_qr_drums.launch  sauvc_qr_drums_lift.launch  sauvc_qr_flare.launch  sauvc_qr_gate-drums_dropper-yellow_flare.launch  sauvc_qr_gate-drums_dropper.launch  sauvc_qr_gate-yellow_flare.launch  sauvc_qr_gate.launch  sauvc_qr_lifter.launch  sauvc_qr_medium.launch  sauvc_qr_qualification.launch  sauvc_qr_qualification_stupid.launch  sauvc_qr_simple.launch  sauvc_qr_test_vma.launch  simulation.launch
src/sauvc_vision/: CMakeLists.txt  package.xml
src/sauvc_vision/launch/: gate_detector.launch  object_detector.launch  object_detector_video_file.launch  publish_video_file.launch
src/sauvc_vision/net/: colors.txt  labels.json  labels.txt  opencv_graph.pbtxt
src/sauvc_vision/scripts/: gate_detector.py  object_detector.py  object_detector_tf.py  opencv_dnn_detector.py  red_flare_detector.py
src/sauvc_vision/weights/: config.yaml
(+125 files in other folders)
