<?xml version="1.0"?>
<package format="2">
  <name>sauvc_common</name>
  <version>0.1.0</version>
  <description>The sauvc_common package that contains messages, services and actions</description>

  <maintainer email="vladik1209@gmail.com">Vladislav Plotnikov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
