<?xml version="1.0"?>
<package format="2">
  <name>sauvc_missions</name>
  <version>0.0.1</version>
  <description>Missions for SAUVC 2022 competition</description>

  <maintainer email="davtart2000@yandex.ru">Davtyan Artyom</maintainer>
  <maintainer email="vladushked@yandex.ru">Vladislav Plotnikov</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>stingray_tfsm</depend>
  <depend>stingray_object_detection</depend>
  <depend>stingray_object_detection_msgs</depend>

</package>
