<?xml version="1.0"?>
<package format="2">
  <name>sauvc_vision</name>
  <version>0.1.0</version>
  <description>SAUVC vision package</description>

  <maintainer email="rentgeny@mail.ru">Akhtyamov Timur</maintainer>
  <maintainer email="vladik1209@gmail.com">Plotnikov Vladislav</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <export></export>
</package>
