<?xml version="1.0"?>
<package format="2">
  <name>sauvc_vision</name>
  <version>0.1.0</version>
  <description>SAUVC vision package</description>

  <maintainer email="rentgeny@mail.ru">Timur Akhtyamov</maintainer>
  <maintainer email="vladik1209@gmail.com">Vladislav Plotnikov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export></export>
</package>
