<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stingray_core_communication</name>
  <version>0.1.0</version>
  <description>Package contains drivers and bridges for communication between real vehicle or simulator and Stingray platform.</description>

  <maintainer email="rentgeny@mail.ru">Timur Akhtyamov</maintainer>
  <maintainer email="vladushked@yandex.ru">Vladislav Plotnikov</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>serial</depend>
  <depend>stingray_core_interfaces</depend>
  <depend>boost</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>